revisión final del uso de la consola

--- a/README.me
+++ b/README.me
@@ -1,8 +1,11 @@
 #java sdk 17
-[https://techviewleo.com/install-java-openjdk-on-ubuntu-linux/](https://techviewleo.com/install-java-openjdk-on-ubuntu-linux/)
+[java 17](https://techviewleo.com/install-java-openjdk-on-ubuntu-linux/)
 
 #cd <class java>
 cd src/subtitles/
 
 #run
 java subtitleConsole.java <path_fichero> <formato--(.srt || .stl)>
+
+#Ejemplo 
+ /usr/bin/env /usr/lib/jvm/java-17-oracle/bin/java -cp /home/frank/.config/Code/User/workspaceStorage/dee6033298633a9cd8a390cd01fa0138/redhat.java/jdt_ws/SubtitleFilesConverter_abdea22/bin subtitles.subtitleConsole  ./AT-20181010.srt .stl
